--- a/index.html
+++ b/index.html
@@ -1,19 +1,24 @@
 <!DOCTYPE html>
-<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rock Paper Scissors</title>
-    <link href="stylesheet.css"/>
+    <link rel="stylesheet" href="stylesheet.css"/>
 </head>
 <body>
-    <button id="rock">Rock</button>
-    <button id="paper">Paper</button>
-    <button id="scissors">Scissors</button>
+    <div class="header">
+        <h1 id="head">Choose Your Weapon</h1>
+    </div>
+    <div id="buttons">
+        <button id="rock" class="button">Rock</button>
+        <button id="paper" class="button">Paper</button>
+        <button id="scissors" class="button">Scissors</button>
+    </div>
     <div id="results">
 
     </div>
-    <script src="script.js"></script>
+    <div class="footer"></div>
+<script src="script.js"></script> 
 </body>
 </html>
